# das-ancc

./: .gitignore  README.md  pyproject.toml
config/: default.yaml
das_ancc/: config.py
das_ancc/correlate/: component_projection.py  cross_correlate.py
das_ancc/dispersion/: ftan.py  picking.py
das_ancc/imaging/: tomography.py
das_ancc/io/: das_metadata.py  sac_reader.py  writer.py
das_ancc/preprocess/: normalize.py  pipeline.py  whiten.py
das_ancc/stack/: stacking.py
das_ancc/viz/: dispersion_plot.py  record_section.py  velocity_map.py
docs/superpowers/plans/: 2026-05-28-das-ancc.md
docs/superpowers/specs/: 2026-05-28-das-ancc-design.md
scripts/: run_pipeline.py
tests/: conftest.py  test_config.py  test_correlate.py  test_dispersion.py  test_imaging.py  test_io.py  test_pipeline.py  test_preprocess.py  test_stack.py
