[project]
name = "das-ancc"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "obspy>=1.4",
    "numpy>=1.24",
    "scipy>=1.10",
    "pyyaml>=6.0",
    "h5py>=3.8",
    "matplotlib>=3.7",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["das_ancc*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
